trunk/Archive/c20b9db5cd112243aa4a7582ae170a6b-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:58:15: error: array must be initialized with a brace-enclosed initializer
   A m_a5[2] = m_a1;        // m_a1                                                                => ill-formed; array initialization requires curly braces
               ^
